<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="tab_record">记录</string>
    <string name="tab_homepage">首页</string>
    <string name="tab_doctor">医生</string>
    <string name="tab_me">我的</string>
    <string name="tab_group">群组</string>
    <string name="none_nickname">匿名</string>
    <string name="user_info_center">个人信息</string>
    <string name="hello_comment_mark">你好,</string>
    <string name="login_welcome">欢迎使用睡眠医生，请登录</string>
    <string name="input_mobil">请输入手机号码</string>
    <string name="input_captcha">请输入验证码</string>
    <string name="send_captcha">发送验证码</string>
    <string name="ok_captcha_hint">验证码已发送成功，请注意查收</string>
    <string name="error_captcha_failed_hint">验证码获取失败，请60s后重新获取</string>
    <string name="register_rule_one">注册即代表同意</string>
    <string name="register_rule_two"><u>睡眠医生用户协议</u></string>
    <string name="register_rule_three">及</string>
    <string name="register_rule_four"><u>隐私政策</u></string>
    <string name="register_rule_user_agreement_title">用户协议</string>
    <string name="register_rule_privacy_policy_title">隐私政策</string>
    <string name="error_network_hint">网络不给力，请检查网络设置&#8230;</string>
    <string name="error_request_failed_hint">网络异常，请检查您的网络情况</string>
    <string name="error_token_past_hint">token已失效，请重新登录</string>
    <string name="login">登录</string>
    <string name="mobile_error">手机号格式错误</string>
    <string name="improve_user_profile_one_part_one">你好，很高兴认识你。</string>
    <string name="improve_user_profile_one_part_two">请问怎么称呼?</string>
    <string name="jump">跳过</string>
    <string name="improve_user_profile_one">完善信息1/2</string>
    <string name="next_step">下一步</string>
    <string name="nickname">昵称</string>
    <string name="input_nickname">请输入昵称</string>
    <string name="improve_user_profile_two">完善信息2/2</string>
    <string name="improve_user_profile_two_part_one">你的真实姓名是?</string>
    <string name="improve_user_profile_two_part_two">医生可以通过真实姓名匹配你的线下就诊记录，能更好的解答你的问题哦。</string>
    <string name="real_name">真实姓名</string>
    <string name="input_real_name">请输入真实姓名</string>
    <string name="warn_real_name">真实姓名只有医生才能看到</string>
    <string name="complete">完成</string>
    <string name="scan_qr_code_join_group">扫码入群</string>
    <string name="qr_code_desc_part_one">还未加入群组，点击下方扫码按钮，扫描医生群组二维码入群。</string>
    <string name="qr_code_desc_part_two">二维码一般由医生提供，如果想加入医生随访群，请向主治医生咨询。</string>
    <string name="scan_qr_code">扫描二维码</string>
    <string name="scan_qr_code_note">将医生群组二维码放入框中，可自动扫描</string>
    <string name="scan_qr_code_warn">扫描二维码，需要授予相机权限，是否授予?</string>
    <string name="scan_qr_code_denied">扫描二维码，授予相机权限失败，请检查该权限是否正确授予，并授予</string>
    <string name="open_camera_failed">打开相机失败，请进入系统设置检查相机权限是否正确授予，并授予</string>
    <string name="no_have_more_data">我也是有底线的…</string>
    <string name="refresh">刷新</string>
    <string name="expired">已过期</string>
    <string name="doctor">医生</string>
    <string name="time_expired_suffix">天后过期</string>
    <string name="setting">设置</string>
    <string name="martian">火星人</string>
    <string name="current_app_version">应用版本</string>
    <string name="about_us">关于我们</string>
    <string name="logout">退出登录</string>
    <string name="brief">简介</string>
    <string name="advisory">咨询费用</string>
    <string name="zero_money">0.00</string>
    <string name="money_for_month">元/月</string>
    <string name="join">加入</string>
    <string name="re_scan">重新搜索</string>
    <string name="pay">支付</string>
    <string name="advisory_one">咨询费用:</string>
    <string name="pay_money">支付金额</string>
    <string name="yuan">元</string>
    <string name="pay_duration">购买时长(月)</string>
    <string name="one">1</string>
    <string name="wechat_pay">微信支付</string>
    <string name="alipay">支付宝支付</string>
    <string name="network_error">同步失败，请检查网络</string>
    <string name="is_syncing_please_wait">正在同步，请稍后…</string>
    <string name="avatar">头像</string>
    <string name="name">真实姓名</string>
    <string name="see_name_for_doctor">真实姓名只有医生才能看到。</string>
    <string name="register_mobile">注册手机</string>
    <string name="take_photo">拍照</string>
    <string name="sd_select_photo_from_gallery">从手机相册选择</string>
    <string name="cancel">取消</string>
    <string name="group_detail">群详情</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_failed">支付失败</string>
    <string name="pay_cancel">支付取消</string>
    <string name="pay_unknown">未知错误，支付失败</string>
    <string name="pay_invalid">支付异常，未找到支付app</string>
    <string name="create_order">正在创建订单…</string>
    <string name="create_order_success">支付中，请稍后</string>
    <string name="join_group">进入群组</string>
    <string name="re_pay">重新支付</string>
    <string name="back">返回</string>
    <string name="ask">提问</string>
    <string name="send">发送</string>
    <string name="talk">按住说话</string>
    <string name="repay">重新支付</string>
    <string name="str_request_camera_message">请求获取相机权限</string>
    <string name="str_request_record_message">请求获取录音权限</string>
    <string name="permissions_camera_error">相机无法完成初始化，请正确授权。</string>
    <string name="permissions_record_error">麦克风无法完成初始化，请正确授权。</string>
    <string name="answer_the_question">管理员回答了你的问题</string>
    <string name="answer">回答:</string>
    <string name="answer_msg_question">回答</string>
    <string name="patient">患者</string>
    <string name="dbo">运营</string>
    <string name="assistant">助理</string>
    <string name="remain_days">剩余天数</string>
    <string name="renewal">续费</string>
    <string name="join_up_group">退出群组</string>
    <string name="from_qr_code_join_group">扫一扫上面的二维码图案，加入此群</string>
    <string name="is_renew">是否续费?</string>
    <string name="group_invalid">该群已过期，续费后可继续使用</string>
    <string name="go_renew">去续费</string>
    <string name="modify_nickname">修改昵称</string>
    <string name="error_nickname">昵称太简单了，不容易让人记住哦</string>
    <string name="name_error">真实姓名太长或太短，不容易让人记住哦</string>
    <string name="pay_faq">咨询费用按月收费，一个月按30天计算</string>
    <string name="qr_code">二维码</string>
    <string name="welcome_join_title">欢迎加入%s，目前暂无新消息</string>
    <string name="up_cancel_record">松开手指，取消发送</string>
    <string name="start_record">按住说话</string>
    <string name="turn_right_cancel_record">向右滑动，取消发送</string>
    <string name="members">群成员列表</string>
    <string name="invalid_qr_code">二维码无效</string>
    <string name="pic_label">[图片]</string>
    <string name="voice_label">[语音]</string>
    <string name="re_scan_qr_code">重新扫描</string>
    <string name="wechat_login">微信登录</string>
    <string name="error_apology">很抱歉！</string>
    <string name="error_404">您要访问的页面不存在</string>
    <string name="error_network">网络连接异常</string>
    <string name="error_network_desc">请查看网络设置或稍后重试</string>
    <string name="error_advisory">暂无咨询记录</string>
    <string name="error_advisory_desc">绑定医生后，可向主治医生咨询</string>
    <string name="error_not_found_desc">您要访问的页面不存在</string>
    <string name="error_report">暂无电子报告</string>
    <string name="error_message_center">没有消息提醒</string>
    <string name="error_message_center_desc">您收到医生回复、建议或报告更新，都会在这里收到消息提醒</string>
    <string name="scan_2_bind_doctor">扫码绑定医生</string>
    <string name="scan_2_doctor_desc">将医生二维码放入框内，可自动扫描</string>
    <string name="opening_wechat">正在打开微信中…</string>
    <string name="no_have_wechat">手机上未安装微信客户端</string>
    <string name="confirm">确定</string>
    <string name="success">成功</string>
    <string name="fail">失败</string>
    <string name="unbind_failed">解绑失败</string>
    <string name="bind">绑定</string>
    <string name="unbind">解绑</string>
    <string name="not_bind_yet">未绑定</string>
    <string name="sun">日</string>
    <string name="mon">一</string>
    <string name="tue">二</string>
    <string name="wed">三</string>
    <string name="thu">四</string>
    <string name="fri">五</string>
    <string name="sat">六</string>
    <string name="go_to_today">回到今天</string>
    <string name="sleep_record">睡眠记录</string>
    <string name="sleep_diary">睡眠日记</string>
    <string name="refill">重填</string>
    <string name="actual_work_and_reset">实际作息</string>
    <string name="record_sleep_time">睡眠时间</string>
    <string name="record_sleep_duration">睡眠时长</string>
    <string name="fall_asleep_duration">入睡时长</string>
    <string name="doctor_advise">医生建议</string>
    <string name="error">Error</string>
    <string name="empty_response">Empty_response</string>
    <string name="taken_pills">服用药物</string>
    <string name="no_sleep_record_hint">保持良好的记录睡眠日记的习惯，有助于睡眠医生分析您的睡眠情况！</string>
    <string name="go_record">去记录</string>
    <string name="no_record_yet">暂无记录</string>
    <string name="percent_mart">%</string>
    <string name="sleep_efficient">睡眠效率</string>
    <string name="do_not_eat_pills">未使用药物</string>
    <string name="remote_sleep_management_service">远程睡眠管理服务</string>
    <string name="remote_sleep_management_service_desc">专业医生每天关注您的睡眠情况</string>
    <string name="sleep_scale">睡眠评测量表</string>
    <string name="fill_scale_hint">了解您的睡眠健康及心理状况</string>
    <string name="scale_fill_date">填写日期：yyyy.MM.dd</string>
    <string name="no_doctor_evaluation_hint">医生建议尚未更新，请耐心等待，更新后，我们会在消息中心通知您查看</string>
    <string name="extra_user_info">以上个人信息仅供医生参考，不予公开。</string>
    <string name="logout_failed_please_check_network">退出登录失败，请检查网络</string>
    <string name="operation_warning">操作警告</string>
    <string name="operation_success">操作成功</string>
    <string name="operation_fail">操作失败</string>
    <string name="system_maintain">系统维护</string>
    <string name="system_maintain_desc">系统正在维护中，请稍后重试</string>
    <string name="today_no_record">今日暂无记录</string>
    <string name="today_no_record_hint">您今天还没有填写睡眠日记</string>
    <string name="cbti_title">失眠的认知行为治疗 CBTi</string>
    <string name="cbti_desc">失眠认知行为治疗是世界上公认的、非药物治疗失眠的最佳疗法，能使各年龄段的失眠人群获益。</string>
    <string name="cbti_progress_ratio">总进度：第2周/共7周</string>
    <string name="see_more"><![CDATA[了解更多 >]]></string>
    <string name="finished">已完成</string>
    <string name="cbti_ing">失眠的认知行为治疗进行中</string>
    <string name="cbti_ing_describe">建议在开课当天完成本周课程学习，自完成之日起7天后开放下阶段课程。</string>
    <string name="cbti_ing_all_finished_desc">恭喜你完成CBTI课程！希望你能继续保持良好的睡眠卫生习惯，早日告别失眠。</string>
    <string name="current_progress_colon">当前进度：</string>
    <string name="enter_and_learn">进入学习</string>
    <string name="my_sleep_prescription">我的睡眠处方</string>
    <string name="my_sleep_prescription_desc">解读睡眠日记，定制睡眠处方</string>
    <string name="service_title_cbti">失眠认知行为治疗(CBTi)</string>
    <string name="service_desc_cbti">非药物治疗失眠的最佳疗法</string>
    <string name="input_captcha_hint">请输入验证码</string>
    <string name="setting_reset_pwd">重置密码</string>
    <string name="change_bind">更换绑定</string>
    <string name="feedback">意见反馈</string>
    <string name="hw_version">固件版本</string>
    <string name="hello_comment">您好，</string>
    <string name="welcome_use_this_app_please_login">欢迎使用速眠医生，请登录</string>
    <string name="input_phone_hint">请输入手机号码</string>
    <string name="input_password_hint">请输入密码</string>
    <string name="login_with_space_inside">登 录</string>
    <string name="app_user_agreement">速眠医生用户协议</string>
    <string name="captcha_login">验证码登录</string>
    <string name="password_login">密码登录</string>
    <string name="captcha_already_sent">已发送%ds</string>
    <string name="please_set_password">请设置密码</string>
    <string name="repeat_password">再次输入密码</string>
    <string name="register_with_space_inside">注 册</string>
    <string name="forget_password_question">忘记密码？</string>
    <string name="validate_phone_number">验证手机</string>
    <string name="phone_number_validation_regex" tools:ignore="TypographyDashes">1([0-9]{10})</string>
    <string name="captcha_validation_regex">\\d{6}</string>
    <string name="password_validation_regex">.{6,16}</string>
    <string name="remind_setting">提醒设置</string>
    <string name="user_privacy_policy">用户隐私政策</string>
    <string name="ji">及</string>
    <string name="clear_cache">清除缓存</string>
    <string name="setting_pwd">设置密码</string>
</resources>