<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/l1_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_50"
        android:paddingLeft="@dimen/space_12"
        android:paddingRight="@dimen/space_12">

        <TextView
            style="@style/CalendarDateText"
            android:text="@string/sun" />

        <TextView
            style="@style/CalendarDateText"
            android:text="@string/mon" />

        <TextView
            style="@style/CalendarDateText"
            android:text="@string/tue" />

        <TextView
            style="@style/CalendarDateText"
            android:text="@string/wed" />

        <TextView
            style="@style/CalendarDateText"
            android:text="@string/thu" />

        <TextView
            style="@style/CalendarDateText"
            android:text="@string/fri" />

        <TextView
            style="@style/CalendarDateText"
            android:text="@string/sat" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/l1_color" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:paddingBottom="@dimen/space_12"
        android:paddingLeft="@dimen/space_12"
        android:paddingRight="@dimen/space_12"
        android:paddingTop="@dimen/space_12" />
</LinearLayout>