<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_padding"
    android:paddingRight="@dimen/activity_horizontal_padding">

    <TextView
        style="@style/text_t3_style"
        android:layout_marginTop="@dimen/space_80"
        android:text="@string/hello_comment"
        android:textColor="@color/t3_color"
        android:textSize="@dimen/font_30" />

    <TextView
        style="@style/text_t2_16"
        android:layout_marginTop="@dimen/space_10"
        android:text="@string/welcome_use_this_app_please_login" />

    <com.sumian.sd.account.login.SumianEditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_90"
        android:layout_marginBottom="@dimen/space_20"
        app:set_hint="@string/input_phone_hint"
        app:set_input_type="number"
        app:set_validation_regex="@string/phone_number_validation_regex" />

    <LinearLayout
        android:id="@+id/ll_password_et_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_48"
        android:background="@drawable/hw_et_bg_sel"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <com.sumian.sd.account.login.SumianEditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:set_hint="@string/input_password_hint"
            app:set_input_type="textPassword"
            app:set_show_bg="false"
            app:set_validation_regex="@string/password_validation_regex" />

        <View
            style="@style/HwVerticalDividerLine"
            android:layout_height="@dimen/space_12"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/tv_forget_password"
            style="@style/text_t2_16"
            android:layout_height="@dimen/space_48"
            android:layout_marginStart="@dimen/space_10"
            android:gravity="center_vertical"
            android:text="@string/forget_password_question" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_captcha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="visible"
        tools:visibility="visible">

        <com.sumian.sd.account.login.SumianEditText
            android:id="@+id/et_captcha"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            app:set_hint="@string/input_captcha_hint"
            app:set_input_type="number"
            app:set_validation_regex="@string/captcha_validation_regex" />

        <com.sumian.sd.widget.CountDownTextView
            android:id="@+id/tv_send_captcha"
            style="@style/SumianButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="6dp"
            app:cdtv_count_down_text="@string/captcha_already_sent"
            app:cdtv_normal_text="@string/send_captcha" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_login"
        style="@style/SumianButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/space_40"
        android:text="@string/login_with_space_inside" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_48"
        android:layout_marginTop="@dimen/space_10"
        android:gravity="center_vertical|start"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/iv_user_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:paddingTop="@dimen/space_10"
            android:paddingEnd="@dimen/space_10"
            android:paddingBottom="@dimen/space_10"
            android:src="@drawable/sel_login_check"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tv_user_agreement"
            style="@style/WrapContent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/app_user_agreement"
            android:textColor="@color/b3_color"
            android:textSize="13sp" />

        <TextView
            style="@style/WrapContent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/ji"
            android:textColor="@color/t2_color"
            android:textSize="13sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_user_privacy_policy"
            style="@style/WrapContent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/user_privacy_policy"
            android:textColor="@color/b3_color"
            android:textSize="13sp"
            android:visibility="visible" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_wechat_login"
            style="@style/text_t2_14"
            android:layout_width="120dp"
            android:gravity="end"
            android:padding="@dimen/space_20"
            android:text="@string/wechat_login" />

        <View
            style="@style/HwVerticalDividerLine"
            android:layout_height="@dimen/space_12" />

        <TextView
            android:id="@+id/tv_captcha_login"
            style="@style/text_t2_14"
            android:layout_width="120dp"
            android:gravity="start"
            android:padding="@dimen/space_20"
            android:text="@string/captcha_login"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_password_login"
            style="@style/text_t2_14"
            android:layout_width="120dp"
            android:gravity="start"
            android:padding="@dimen/space_20"
            android:text="@string/password_login"
            android:visibility="visible" />
    </LinearLayout>
</LinearLayout>