<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/b1_color"
    android:orientation="vertical">

    <com.sumian.sd.widget.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu_text="@string/jump"
        app:show_back="false"
        app:text="@string/improve_user_profile_one" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/b3_color"
        android:paddingLeft="@dimen/space_32"
        android:paddingTop="@dimen/space_32"
        android:paddingRight="@dimen/space_32"
        android:singleLine="true"
        android:text="@string/improve_user_profile_one_part_one"
        android:textColor="@color/b2_color"
        android:textSize="@dimen/font_18" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/b3_color"
        android:paddingLeft="@dimen/space_32"
        android:paddingTop="@dimen/space_4"
        android:paddingRight="@dimen/space_32"
        android:paddingBottom="@dimen/space_20"
        android:text="@string/improve_user_profile_one_part_two"
        android:textColor="@color/b2_color"
        android:textSize="@dimen/font_18" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:background="@color/b2_color"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/space_28"
        android:paddingRight="@dimen/space_28">

        <TextView
            style="@style/text_t1_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_captcha"
            style="@style/edit_text_t2_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_64"
            android:layout_marginLeft="@dimen/space_16"
            android:background="@null"
            android:hint="@string/input_nickname"
            android:inputType="text"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

    <Button
        android:id="@+id/bt_next_step"
        style="@style/bt_t1_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/space_32"
        android:layout_marginTop="@dimen/space_28"
        android:layout_marginRight="@dimen/space_32"
        android:text="@string/next_step" />


</LinearLayout>